second year page is done with resource section, also references have been added

--- a/src/pages/resources/co-resources/Year 1/Sem 1/Basic_Math_7G501.html
+++ b/src/pages/resources/co-resources/Year 1/Sem 1/Basic_Math_7G501.html
@@ -162,7 +162,7 @@
                 <div class="block-item">
                     <h3>Notes</h3>
                     <div class="sub-section">
-                        <span class="tag">Not Avaliable Yet... Please contribute our notes via following Google Form</span> 
+                        <span class="tag">Not Avaliable Yet... Please contribute your notes via following Google Form</span> 
                     </div>
                 </div>
 
