--- a/src/pages/resources/co-resources/Year 2/sem 4/DIP-7P202.html
+++ b/src/pages/resources/co-resources/Year 2/sem 4/DIP-7P202.html
@@ -126,32 +126,24 @@
                     <div class="sub-section">
                         <div class="pdf-container">
                             <img
-                                src="pdf-preview.jpg"
+                                src="https://drive.google.com/thumbnail?id=1VZ0z30My6cgfeQx2F3UEXPVA_nhuQ5Nv"
                                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
+                            <p class="pdf-title">Digital Image Proccessing<br>(7P202)</p>
+                            <p class="pdf-author">GPCS</p>
+                            <a href="https://drive.google.com/file/d/1VZ0z30My6cgfeQx2F3UEXPVA_nhuQ5Nv/view?usp=drive_link" class="download-link"
                                 >Download</a
                             >
                         </div>
                         <div class="pdf-container">
                             <img
-                                src="pdf-preview.jpg"
+                                src="https://drive.google.com/thumbnail?id=1TUgGfojLdMWVOpVWpf7_QEonoHF2G4ns"
                                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <a href="document.pdf" class="download-link"
-                                >Download</a
-                            >
-                        </div>
-                        <div class="pdf-container">
-                            <img
-                                src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
-                                alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <a href="document.pdf" class="download-link"
+                            <p class="pdf-title">Whole 4th Semister</p>
+                            <p class="pdf-author">GPCS</p>
+                            
+                            <a href="https://drive.google.com/file/d/1TUgGfojLdMWVOpVWpf7_QEonoHF2G4ns/view?usp=drive_link" class="download-link"
                                 >Download</a
                             >
                         </div>
@@ -161,79 +153,17 @@
                 <div class="block-item">
                     <h3>Notes</h3>
                     <div class="sub-section">
-                        <div class="pdf-container">
-                            <img
-                                src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
-                                alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
-                                >Download</a
-                            >
-                        </div>
-                        <div class="pdf-container">
-                            <img
-                                src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
-                                alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
-                                >Download</a
-                            >
-                        </div>
-                        <div class="pdf-container">
-                            <img
-                                src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
-                                alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
-                                >Download</a
-                            >
-                        </div>
+                        <span class="tag">Not Avaliable Yet... Please contribute your notes via following Google Form</span> 
                     </div>
                 </div>
 
                 <div class="block-item">
                     <h3>Reference Books</h3>
                     <div class="sub-section">
-                        <div class="pdf-container">
-                            <img
-                                src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
-                                alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
-                                >Download</a
-                            >
-                        </div>
-                        <div class="pdf-container">
-                            <img
-                                src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
-                                alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
-                                >Download</a
-                            >
-                        </div>
-                        <div class="pdf-container">
-                            <img
-                                src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
-                                alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
-                                >Download</a
-                            >
-                        </div>
+                        <span class="tag">Not Avaliable Yet... Please contribute your reference books via following Google Form</span> 
                     </div>
+                </div>
+
                 </div>
             </section>
 
@@ -243,81 +173,24 @@
                     <div class="block-item">
                         <h3>Practicals</h3>
                         <div class="sub-section">
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
-                            </div>
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
+                            <div class="sub-section">
+                                <span class="tag">Not Avaliable Yet... </span> 
                             </div>
                         </div>
                     </div>
                     <div class="block-item">
                         <h3>Assignments</h3>
                         <div class="sub-section">
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
-                            </div>
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
+                            <div class="sub-section">
+                                <span class="tag">Not Avaliable Yet... </span> 
                             </div>
                         </div>
                     </div>
                     <div class="block-item">
                         <h3>Tutorials</h3>
                         <div class="sub-section">
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
-                            </div>
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
+                            <div class="sub-section">
+                                <span class="tag">Not Avaliable Yet... </span> 
                             </div>
                         </div>
                     </div>
@@ -329,81 +202,24 @@
                     <div class="block-item">
                         <h3>Presentations</h3>
                         <div class="sub-section">
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
-                            </div>
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
+                            <div class="sub-section">
+                                <span class="tag">Not Avaliable Yet... </span> 
                             </div>
                         </div>
                     </div>
                     <div class="block-item">
                         <h3>Report</h3>
                         <div class="sub-section">
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
-                            </div>
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
+                            <div class="sub-section">
+                                <span class="tag">Not Avaliable Yet... </span> 
                             </div>
                         </div>
                     </div>
                     <div class="block-item">
                         <h3>Micro-Project</h3>
                         <div class="sub-section">
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
-                            </div>
-                            <div class="pdf-container">
-                                <img
-                                    src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
-                                    >Download</a
-                                >
+                            <div class="sub-section">
+                                <span class="tag">Not Avaliable Yet... </span> 
                             </div>
                         </div>
                     </div>
@@ -415,22 +231,22 @@
                 <div class="horizontal-scroll">
                     <div class="pdf-container">
                         <img
-                            src="../../../public/images/"
+                            src="https://th.bing.com/th?id=OVP.QrZUfjFu8IfMTbP_euxK0AHgFo&w=187&h=105&c=7&rs=1&qlt=90&pid=2.1"
                             onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                             alt="Curriculum1" />
-                        <p class="pdf-title">Video Title</p>
-                        <p class="pdf-author">Author Name</p>
-                        <a href="document.pdf" class="download-link">View</a>
+                        <p class="pdf-title">Digital Image Processing</p>
+                        <p class="pdf-author">Author : Unknown</p>
+                        <a href="https://www.bing.com/videos/riverview/relatedvideo?&q=digital+image+processing+&&mid=5FF33302E3E512CC30AD5FF33302E3E512CC30AD&&FORM=VRDGAR" class="download-link">View</a>
                     </div>
-                    <div class="pdf-container">
+                    <!--div class="pdf-container">
                         <img
-                            src="pdf-preview.jpg"
+                            src="https://i.ytimg.com/vi/uq5WQkoH53c/hq720.jpg?sqp=-oaymwEnCNAFEJQDSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLDMK4sdinZC6aaaTMMaNbb3Xvuj0w"
                             onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                             alt="Curriculum1" />
-                        <p class="pdf-title">Video Title</p>
-                        <p class="pdf-author">Author Name</p>
-                        <a href="document.pdf" class="download-link">View</a>
-                    </div>
+                        <p class="pdf-title">BASIC MATHS TUTORIALS</p>
+                        <p class="pdf-author">Author :</p>
+                        <a href="https://youtu.be/uq5WQkoH53c?si=JwSIQsd1bS3sNjoE" class="download-link">View</a>
+                    </div-->
                 </div>
             </section>
             <section class="section">
